--- a/views/index.html
+++ b/views/index.html
@@ -5,6 +5,14 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <h2>Hello World!</h2>
+  <div class="content">
+    <div class="container">
+      <h2>File Metadata API</h2>
+      <form action="/api/metadata" method="post" enctype="multipart/form-data" class="file-upload">
+        <input type="file" name="upfile">
+        <input id="button" type="submit" value="Upload">
+      </form>
+    </div>
+  </div>
 </body>
 </html>
