--- a/views/index.html
+++ b/views/index.html
@@ -8,6 +8,8 @@
   <div class="content">
     <div class="container">
       <h2>File Metadata API</h2>
+      <h3>Usage:</h3>
+      <p>Just select a file and upload....</p>
       <form action="/api/metadata" method="post" enctype="multipart/form-data" class="file-upload">
         <input type="file" name="upfile">
         <input id="button" type="submit" value="Upload">
