--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,7 @@
 html, body {
   margin: 0;
   padding: 0;
-  height: 100%;
+  height: 100vh;
 }
 
 * {
@@ -13,8 +13,16 @@ body {
   background-color: lightgray;
 }
 
+h3, h2 {
+  margin: 5px;
+}
+
+p {
+  margin: 5px;
+}
 .content {
-  width: 100%;
+  margin-top: 45px;
+  width: 100vw;
   display: flex;
   justify-content: center;
 }
@@ -22,7 +30,6 @@ body {
 .container {
   width: 80%;
   display: flex;
-  justify-content: center;
   align-items: center;
   flex-direction: column;
 }
